--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,8 +46,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Temperaturas: Sevilla</h1>
-                    <h2>Aplicación escrita en Python</h2>
+                    <h1>Temperaturas: {{prov}}</h1>
+                    <h2>Municipios</h2>
                     {% block content %}{% endblock %}
                 </div>
             </div>
