--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Temperaturas: {{prov}} Versión 2</h1>
+                    <h1>Temperaturas: {{prov}}</h1>
                     <h2>Municipios</h2>
                     {% block content %}{% endblock %}
                 </div>
